Se agregó dependencias varias, se agregaron pruebas unitarias para pagos-ms, se modificó properties para uso de YAML, se implementó Swagger, Eureka y Gateway